add socket io init

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,16 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='/socket.io/socket.io.js')
+    script.
+        var socket = io();
+        console.log('running.....');
+        socket.on('connect', ()=>{
+          console.log('connected to the server...');
+        });
+
+        socket.on('disconnect',()=>{
+          console.log('disconnected from server...');
+        })
   body
     block content
