--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,10 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  hr
+  ol#messages
+  form(id='message-form')
+    div.form-group
+      label(for='name') Message:
+      input#name.form-control(type='text', placeholder='what do you think?' name='message')
+    button.btn.btn-primary() Send
