--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,8 +3,16 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    //link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
     script(src='/socket.io/socket.io.js')
+    script(src='/javascripts/libs/jquery-3.2.1.min.js')
     script(src='/javascripts/index.js')
+    //script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
+
+    
+
+    
+    
 
 
   body
