--- a/views/index.jade
+++ b/views/index.jade
@@ -10,3 +10,5 @@ block content
       label(for='name') Message:
       input#name.form-control(type='text', placeholder='what do you think?' name='message')
     button.btn.btn-primary() Send
+  hr
+  button.btn.btn-success(id="send-location") Send Location
