--- a/views/index.jade
+++ b/views/index.jade
@@ -1,14 +1,13 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
-  hr
-  ol#messages
-  form(id='message-form')
-    div.form-group
-      label(for='name') Message:
-      input#name.form-control(type='text', placeholder='what do you think?' name='message')
-    button.btn.btn-primary() Send
-  hr
-  button.btn.btn-success(id="send-location") Send Location
+  div.chat__sidebar
+    h3 People
+    div#users
+  div.chat__main
+    ol.chat__messages#messages
+    div.chat__footer
+      form(id='message-form')
+        input#name.form-control(type='text', placeholder='what do you think?' name='message', autofocus, autocomplete="off")
+        button.btn.btn-primary() Send
+      button.btn.btn-success(id="send-location") Send Location
