--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html
     //link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
     script(src='/socket.io/socket.io.js')
     script(src='/javascripts/libs/jquery-3.2.1.min.js')
+    script(src='/javascripts/libs/moment.js')
     script(src='/javascripts/index.js')
     //script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
 
