use templates and mustache.js to show the messages

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,20 +1,36 @@
 doctype html
 html
   head
-    title= title
+    title=title
     link(rel='stylesheet', href='/stylesheets/style.css')
     //link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
+    script#message-template(type='text/template').
+      <li class="message">
+        <div class="message__title">
+          <h4>{{from}}</h4>
+          <span>{{createdAt}}</span>
+        </div>
+        <div class="message__body">
+          <p>{{text}}</p>
+        </div>
+      </li>
+    script#location-message-template(type='text/template').
+      <li class="message">
+        <div class="message__title">
+          <h4>{{from}}</h4>
+          <span>{{createdAt}}</span>
+        </div>
+        <div class="message__body">
+          <p>
+            <a href="{{url }}" target="_blank">My current location</a>
+          </p>
+        </div>
+      </li>
     script(src='/socket.io/socket.io.js')
     script(src='/javascripts/libs/jquery-3.2.1.min.js')
     script(src='/javascripts/libs/moment.js')
+    script(src='/javascripts/libs/mustache.js')
     script(src='/javascripts/index.js')
-    //script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
-
-    
-
-    
-    
-
 
   body.chat
     block content
