--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,9 @@
 doctype html
 html
   head
+    meta(charset='UTF-8')
+    meta(name='viewport', content='width=device-width,initial-scale=1,user-scalable=no')
+    
     title=title
     link(rel='stylesheet', href='/stylesheets/style.css')
     //link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
@@ -30,7 +33,7 @@ html
     script(src='/javascripts/libs/jquery-3.2.1.min.js')
     script(src='/javascripts/libs/moment.js')
     script(src='/javascripts/libs/mustache.js')
-    script(src='/javascripts/index.js')
+    script(src='/javascripts/chat.js')
 
   body.chat
     block content
