Add users class and updte userList event

--- a/views/index.jade
+++ b/views/index.jade
@@ -10,6 +10,6 @@ block content
         input(type='text', placeholder='Your name' name='name', autofocus, autocomplete="off")
       div.form-field
         label Room Name
-        input(type='text', placeholder='what do you think?' name='room')
+        input(type='text', placeholder='Room name' name='room')
       div.form-field
          button Join
