--- a/views/layout.chat.jade
+++ b/views/layout.chat.jade
@@ -33,6 +33,7 @@ html
     script(src='/javascripts/libs/jquery-3.2.1.min.js')
     script(src='/javascripts/libs/moment.js')
     script(src='/javascripts/libs/mustache.js')
+    script(src='/javascripts/libs/deparam.js')
     script(src='/javascripts/chat.js')
 
   body.chat
