--- a/views/chat.jade
+++ b/views/chat.jade
@@ -9,5 +9,5 @@ block content
     div.chat__footer
       form(id='message-form')
         input#name.form-control(type='text', placeholder='what do you think?' name='message', autofocus, autocomplete="off")
-        button.btn.btn-primary() Send
+        button.btn.btn-primary Send
       button.btn.btn-success(id="send-location") Send Location
