--- a/views/layout.chat.jade
+++ b/views/layout.chat.jade
@@ -25,7 +25,14 @@ html
         </div>
         <div class="message__body">
           <p>
-            <a href="{{url }}" target="_blank">My current location</a>
+            <a href="{{url}}" target="_blank">
+             <div class="polaroid">
+                <img src="{{imgUrl}}" alt="my Location" style="width:100%">
+                <div class="container">
+                  <p>My location</p>
+                </div>
+              </div>
+             </a>
           </p>
         </div>
       </li>
