--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -229,4 +229,15 @@ div.container {
   .chat__footer button {
     margin-right: 0px;
   }
+  div.polaroid {
+  width: 50%;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 25px;
+}
+
+div.container {
+  text-align: center;
+  padding: 10px 20px;
+}
 }
